--- a/styles/bar/bar.scss
+++ b/styles/bar/bar.scss
@@ -1,6 +1,7 @@
-* {
-    background-color: black;
-&.test {
-    background-color: blue;
-}
+.test-button {
+    background-color: rgba(0, 0, 0, 0.171);
+
+    &:hover {
+        background-color: rgba(0, 0, 0, 1);
+    }
 }
