--- a/styles/bar/bar.scss
+++ b/styles/bar/bar.scss
@@ -1,7 +1,11 @@
 .test-button {
-    background-color: rgba(0, 0, 0, 0.171);
+    background-color: rgba(49, 49, 49, 0.171);
 
     &:hover {
         background-color: rgba(0, 0, 0, 1);
     }
+}
+
+.clock {
+    color: blue;
 }
